# physics-informed-roast-rollout-comparison

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: README.md
manuscript/scientific_reports/submission_latex/: build_texlive.ps1  main.tex  references.bib
reports/manuscript_hpo/: environment.json  final_test_metrics.json  final_test_metrics.md  greybox_bs8_probe.json  multi_closure_final.json  priors_probe_pi_fixed_priors.json  priors_probe_scalar_tuned_priors.json  priors_probe_scalar_tuned_priors_with_init_net.json  priors_probe_true_mechanistic.json  priors_probes_done.flag  residual_ff_final.json  residual_ff_probe.json  residual_ff_probe_unbounded.json  residual_ff_unbounded_final.json  search_state.json  seed11_rollouts.json
reports/manuscript_hpo/blackbox/: all_trials.jsonl  best_config.json  sweep_summary.md
reports/manuscript_hpo/checkpoints/: greybox_seed11.pt  greybox_seed23.pt  greybox_seed37.pt
scripts/: analyze_spectrum_statistics.py  build_data_manifest.py  build_figure_per_roast_correlation.py  build_figure_position_spectrum.py  build_figure_representative_rollouts.py  build_roast_profile_preprocessing_schematic.py  plot_hpo_diagnostics.py  prepare_roast_dataset.py  probe_greybox_bs8.py  probe_priors.py  regenerate_seed11_trajectories.py  retrain_multi_closure_final.py  retrain_residual_ff_final.py  tune_manuscript_models.py
src/roaster_piml/: __init__.py  blackbox.py  dataset.py  io_utils.py  model.py  roast_filters.py  roast_window.py  schema.py  thesis_full_state.py  thesis_residual.py
(+29 files in other folders)
