[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-roaster-piml"
version = "0.1.0"
description = "Reproducible pipeline for coffee-roaster system identification and physics-informed ML baselines"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
